--- a/action.yml
+++ b/action.yml
@@ -36,14 +36,17 @@ runs:
       run: |
         wget https://github.com/aquasecurity/trivy/releases/download/v${{ inputs.TRIVY_VERSION }}/trivy_${{ inputs.TRIVY_VERSION }}_Linux-64bit.tar.gz
         tar zxvf trivy_${{ inputs.TRIVY_VERSION }}_Linux-64bit.tar.gz
+      shell: bash
     - name: Install trivy-to-vuls
       run: |
         wget https://github.com/future-architect/vuls/releases/download/v${{ inputs.VULS_VERSION }}/trivy-to-vuls_${{ inputs.VULS_VERSION }}_linux_amd64.tar.gz
         tar zxvf trivy-to-vuls_${{ inputs.vulsVersion }}_linux_amd64.tar.gz
+      shell: bash
     - name: Install future-vuls
       run: |
         wget https://github.com/future-architect/vuls/releases/download/v${{ inputs.VULS_VERSION }}/future-vuls_${{ inputs.VULS_VERSION }}_linux_amd64.tar.gz
         tar zxvf future-vuls_${VULS_VERSION}_linux_amd64.tar.gz
+      shell: bash
     - name: Scan Dockerfile by trivy
       run: |
         docker build . -f ${{ inputs.DOCKERFILE_PATH }} -t ${{ inputs.IMAGE_NAME }}
@@ -51,3 +54,4 @@ runs:
         ./trivy -q --cache-dir vulndb/ image -f=json ${{ inputs.IMAGE_NAME }} | \
         ./trivy-to-vuls parse --stdin | \
         ./future-vuls upload --stdin --url ${{ inputs.FVULS_AUTH_URL }} --group-id ${{ inputs.FVULS_GROUP_ID }}  --token ${{ inputs.FVULS_TOKEN }}  --uuid ${{ inputs.FVULS_SERVER_UUID }}
+      shell: bash
