--- a/action.yml
+++ b/action.yml
@@ -34,17 +34,17 @@ runs:
         key: trivy-vulndb
     - name: Install trivy
       run: |
-        wget https://github.com/aquasecurity/trivy/releases/download/v${{ inputs.TRIVY_VERSION }}/trivy_${{ inputs.TRIVY_VERSION }}_Linux-64bit.tar.gz
+        wget -nv https://github.com/aquasecurity/trivy/releases/download/v${{ inputs.TRIVY_VERSION }}/trivy_${{ inputs.TRIVY_VERSION }}_Linux-64bit.tar.gz
         tar zxvf trivy_${{ inputs.TRIVY_VERSION }}_Linux-64bit.tar.gz
       shell: bash
     - name: Install trivy-to-vuls
       run: |
-        wget https://github.com/future-architect/vuls/releases/download/v${{ inputs.VULS_VERSION }}/trivy-to-vuls_${{ inputs.VULS_VERSION }}_linux_amd64.tar.gz
+        wget -nv https://github.com/future-architect/vuls/releases/download/v${{ inputs.VULS_VERSION }}/trivy-to-vuls_${{ inputs.VULS_VERSION }}_linux_amd64.tar.gz
         tar zxvf trivy-to-vuls_${{ inputs.VULS_VERSION }}_linux_amd64.tar.gz
       shell: bash
     - name: Install future-vuls
       run: |
-        wget https://github.com/future-architect/vuls/releases/download/v${{ inputs.VULS_VERSION }}/future-vuls_${{ inputs.VULS_VERSION }}_linux_amd64.tar.gz
+        wget -nv https://github.com/future-architect/vuls/releases/download/v${{ inputs.VULS_VERSION }}/future-vuls_${{ inputs.VULS_VERSION }}_linux_amd64.tar.gz
         tar zxvf future-vuls_${VULS_VERSION}_linux_amd64.tar.gz
       shell: bash
     - name: Scan Dockerfile by trivy
