--- a/action.yml
+++ b/action.yml
@@ -48,7 +48,7 @@ runs:
       run: |
         if [ "${{ inputs.TRIVY_VERSION }}" == "latest" ]; then
           export LATEST_VERSION=$(curl --silent "https://api.github.com/repos/aquasecurity/trivy/releases/latest" | jq -r .tag_name) | cut -c 2-
-          wget -nv https://github.com/aquasecurity/trivy/releases/download/v$LATEST_VERSION/trivy_$LATEST_VERSION_Linux-64bit.tar.gz
+          wget -nv "https://github.com/aquasecurity/trivy/releases/download/v${LATEST_VERSION}/trivy_${LATEST_VERSION}_Linux-64bit.tar.gz"
           tar zxvf "trivy_${LATEST_VERSION}_Linux-64bit.tar.gz"
         else
           wget -nv https://github.com/aquasecurity/trivy/releases/download/v${{ inputs.TRIVY_VERSION }}/trivy_${{ inputs.TRIVY_VERSION }}_Linux-64bit.tar.gz
