--- a/action.yml
+++ b/action.yml
@@ -5,8 +5,7 @@ inputs:
   VULS_VERSION:
     description: "Specify the version fo vuls"
     default: "latest"
-    required: false
-  TRIVY_VERSION:
+    required: false TRIVY_VERSION:
     description: "Specify the version for trivy"
     default: "latest"
     required: false
@@ -47,7 +46,7 @@ runs:
     - name: Install trivy
       run: |
         if [ "${{ inputs.TRIVY_VERSION }}" == "latest" ]; then
-          export LATEST_VERSION=$(curl --silent "https://api.github.com/repos/aquasecurity/trivy/releases/latest" | jq -r .tag_name) | cut -c 2-
+          export LATEST_VERSION=$(curl --silent "https://api.github.com/repos/aquasecurity/trivy/releases/latest" | jq -r .tag_name | cut -c 2-)
           echo $LATEST_VERSION
           wget -nv "https://github.com/aquasecurity/trivy/releases/download/v${LATEST_VERSION}/trivy_${LATEST_VERSION}_Linux-64bit.tar.gz"
           tar zxvf "trivy_${LATEST_VERSION}_Linux-64bit.tar.gz"
@@ -59,7 +58,7 @@ runs:
     - name: Install trivy-to-vuls
       run: |
         if [ "${{ inputs.VULS_VERSION }}" == "latest" ]; then
-          export LATEST_VERSION=$(curl --silent "https://api.github.com/repos/future-architect/vuls/releases/latest" | jq -r .tag_name) | cut -c 2-
+          export LATEST_VERSION=$(curl --silent "https://api.github.com/repos/future-architect/vuls/releases/latest" | jq -r .tag_name | cut -c 2-)
           wget -nv https://github.com/future-architect/vuls/releases/download/v${LATEST_VERSION}/trivy-to-vuls_${LATEST_VERSION}_linux_amd64.tar.gz
           tar zxvf trivy-to-vuls_${LATEST_VERSION}_linux_amd64.tar.gz
         else
@@ -70,7 +69,7 @@ runs:
     - name: Install future-vuls
       run: |
         if [ "${{ inputs.VULS_VERSION }}" == "latest" ]; then
-          export LATEST_VERSION=$(curl --silent "https://api.github.com/repos/future-architect/vuls/releases/latest" | jq -r .tag_name) | cut -c 2-
+          export LATEST_VERSION=$(curl --silent "https://api.github.com/repos/future-architect/vuls/releases/latest" | jq -r .tag_name | cut -c 2-)
           wget -nv https://github.com/future-architect/vuls/releases/download/v${LATEST_VERSION}/future-vuls_${LATEST_VERSION}_linux_amd64.tar.gz
           tar zxvf future-vuls_${LATEST_VERSION}_linux_amd64.tar.gz
         else
